[gd_scene load_steps=11 format=3 uid="uid://ds040yqme67rk"]

[ext_resource type="Script" path="res://main.gd" id="1_jh01d"]
[ext_resource type="PackedScene" uid="uid://srapgnfh0jom" path="res://demo_box/demo_block.tscn" id="2_oojcs"]
[ext_resource type="Shader" path="res://vignette.gdshader" id="3_vsd42"]
[ext_resource type="Texture2D" uid="uid://5gf8mbtf8qm0" path="res://banner_gradient.png" id="4_wh4yr"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_dwdcx"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_if15j"]
sky_material = SubResource("ProceduralSkyMaterial_dwdcx")

[sub_resource type="Environment" id="Environment_fm0n1"]
background_mode = 1
sky = SubResource("Sky_if15j")
tonemap_mode = 3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fgt02"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.621524, 0.621524, 0.621524, 0.0588235)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iog2c"]
shading_mode = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fq1bx"]
shader = ExtResource("3_vsd42")
shader_parameter/inner_radius = 0.5
shader_parameter/outer_radius = 0.6
shader_parameter/vignette_strength = 0.25
shader_parameter/dither_strength = 0.1
shader_parameter/vignette_color = Color(0, 0, 0.101961, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1_jh01d")
demo_block_packed = ExtResource("2_oojcs")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_fm0n1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 2.85, 17)
fov = 30.0
size = 8.619

[node name="BackgroundGrid" type="MeshInstance3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -40)
material_override = SubResource("StandardMaterial3D_fgt02")
skeleton = NodePath("../..")

[node name="DemoBlockGrid" type="Node3D" parent="."]

[node name="UpArrowMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.25, 5.4, 0)
material_override = SubResource("StandardMaterial3D_iog2c")
skeleton = NodePath("../DemoBlockGrid")

[node name="DownArrowMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 2.25, -0.9, 0)
material_override = SubResource("StandardMaterial3D_iog2c")
skeleton = NodePath("../DemoBlockGrid")

[node name="Vignette" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_fq1bx")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="TextureRect" parent="."]
modulate = Color(7.46027e-07, 0, 0.403407, 1)
texture_filter = 1
offset_top = -8.0
offset_right = 400.0
offset_bottom = 56.0
mouse_filter = 2
texture = ExtResource("4_wh4yr")

[node name="JankStationLabel" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 27.0
offset_top = 2.0
offset_right = 167.0
offset_bottom = 25.0
mouse_filter = 2
bbcode_enabled = true
text = "JankStation"
fit_content = true
scroll_active = false

[node name="ClockLabel" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 340.0
offset_top = 5.0
offset_right = 429.0
offset_bottom = 28.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "12:00am"
fit_content = true
scroll_active = false

[node name="DemoTitleLabel" type="RichTextLabel" parent="."]
visible = false
texture_filter = 1
offset_left = 225.0
offset_top = 299.0
offset_right = 484.0
offset_bottom = 339.0
rotation = -1.5708
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]Demo Title[/center]"
fit_content = true
scroll_active = false

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
texture_filter = 1
offset_left = 258.0
offset_top = 78.0
offset_right = 376.0
offset_bottom = 273.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 12
text = "This is a dope demo that you should play right now."

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
offset_left = 256.0
offset_top = 81.0
offset_right = 375.0
offset_bottom = 122.0
mouse_filter = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 235.0
offset_top = 74.0
offset_right = 385.0
offset_bottom = 97.0
mouse_filter = 2
bbcode_enabled = true
text = "[center]Demo Title[/center]"
fit_content = true
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 236.0
offset_top = 113.0
offset_right = 381.0
offset_bottom = 267.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "This is a dope demo that you should play right now."
fit_content = true
scroll_active = false
